# ValidDataSet

./: .flake8  .gitattributes  .gitignore  .pylintrcfile  README.md  build_and_upload.sh  mypy.ini  poetry.toml  pyproject.toml  pytest.ini
src/vds/: colorizer.py  config.py  main.py
src/vds/plugins/files/: f001.py  f002.py  f003.py
src/vds/plugins/transcription/: t001.py  t002.py  t003.py  t004.py  t005.py  t006.py  t007.py
